@@ -225,7 +225,11 @@ connected_add_ipv4 (struct interface *ifp, int flags, struct in_addr *addr,
 
   /* Check same connected route. */
   if ((current = connected_check (ifp, (struct prefix *) ifc->address)))
-    connected_withdraw (current); /* implicit withdraw - freebsd does this */
+    {
+      if (CHECK_FLAG(current->conf, ZEBRA_IFC_CONFIGURED))
+	SET_FLAG(ifc->conf, ZEBRA_IFC_CONFIGURED);
+      connected_withdraw (current); /* implicit withdraw - freebsd does this */
+    }
   
   connected_announce (ifp, ifc);
 }
@@ -364,7 +368,11 @@ connected_add_ipv6 (struct interface *ifp, struct in6_addr *addr,
     ifc->label = XSTRDUP (MTYPE_CONNECTED_LABEL, label);
   
   if ((current = connected_check (ifp, (struct prefix *) ifc->address)))
-    connected_withdraw (current); /* implicit update of existing address */
+    {
+      if (CHECK_FLAG(current->conf, ZEBRA_IFC_CONFIGURED))
+	SET_FLAG(ifc->conf, ZEBRA_IFC_CONFIGURED);
+      connected_withdraw (current); /* implicit update of existing address */
+    }
   
   connected_announce (ifp, ifc);
 }
